<resources>

    <string name="app_name">Dots</string>
    <string name="menu_settings">Preferences</string>
    <string name="title_activity_main">Dots</string>
    <string name="new_game_button">New Game</string>
    <string name="resume_game_button">Resume Game</string>
    <string name="exit_button">Exit</string>
    <string name="player_one_score">Player One: 0</string>
    <string name="player_two_score">Player Two: 0</string>
    <string name="player_turn">Player One\'s Turn</string>
    <string name="undo_button">Undo</string>
    <string name="reset_button">Reset</string>
    <string name="main_menu_button">New Game</string>
    <string name="player_one_name">Player One</string>
    <string name="player_two_name">Player Two</string>
    <string name="grid_size">Grid Size</string>
    <string name="two_player_button">Two Player</string>
    <string name="one_player_easy_button">One Player Easy</string>
    <string name="one_player_hard_button">One Player Hard</string>
    <string name="start_game">Start Game</string>
    <string name="player_1_color">Player 1 Color</string>
    <string name="player_2_color">Player 2 Color</string>
    <string name="p1color">p1color</string>
    <string name="p2color">p2color</string>
    <string name="player_preferences">Player Preferences</string>
    <string name="help">Help</string>
    <string name="help_text">Touch between two dots to create a line there.  If a player successfully creates a box, he or she will take another turn.</string>

</resources>